--- a/src/blocks/places/__delete-button/places__delete-button.css
+++ b/src/blocks/places/__delete-button/places__delete-button.css
@@ -11,7 +11,7 @@
   width: 18px;
   height: 19px;
   cursor: pointer;
-  /* display: none; Временно видно у всех карточек*/
+  display: none;
 }
 
 .places__delete-button:hover {
