--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,8 +1,15 @@
 @import url(./__logo/header__logo.css);
+@import url(./__link/header__link.css);
+@import url(./__link/_dark/header__link_dark.css);
+@import url(./__email/header__email.css);
+@import url(./__info/header__info.css);
 
 .header {
     border-bottom: 1px solid #545454;
     margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 @media screen and (min-width: 768px) {
