--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,6 +8,7 @@
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/form/form.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/auth/auth.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/places/places.css);
 @import url(../blocks/footer/footer.css);
